[gd_scene load_steps=10 format=3 uid="uid://ckl4yx1m2io4v"]

[ext_resource type="AudioStream" uid="uid://cwycn706i2uho" path="res://assets/sounds/sfx/Marching.mp3" id="1_tm7ql"]
[ext_resource type="Script" path="res://scripts/managers/SoundManager.gd" id="1_uyqwa"]
[ext_resource type="AudioStream" uid="uid://cotulhxlwiqpn" path="res://assets/sounds/sfx/sword_slash.mp3" id="2_2xnia"]
[ext_resource type="AudioStream" uid="uid://bgwec1wesfsmu" path="res://assets/sounds/Atmosphere.mp3" id="2_s5ku7"]
[ext_resource type="AudioStream" uid="uid://dirwxw7f73mdj" path="res://assets/sounds/killsound2.mp3" id="3_bqobu"]
[ext_resource type="AudioStream" uid="uid://casc2sginvnwg" path="res://assets/sounds/sfx/empv2.mp3" id="4_pl06t"]
[ext_resource type="AudioStream" uid="uid://qk1veqc5of07" path="res://assets/sounds/sfx/metal_strike.mp3" id="5_m152d"]
[ext_resource type="AudioStream" uid="uid://0y8kwywbgqoi" path="res://assets/sounds/gameover.mp3" id="6_rqlui"]
[ext_resource type="AudioStream" uid="uid://bxicy412bk758" path="res://assets/sounds/hpDownSound.mp3" id="8_tou4a"]

[node name="SoundManager" type="Node3D"]
process_mode = 3
script = ExtResource("1_uyqwa")

[node name="SFX" type="Node" parent="."]

[node name="Emp" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_pl06t")

[node name="Kill" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_bqobu")
volume_db = -80.0

[node name="Slash" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("2_2xnia")

[node name="Marching" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("1_tm7ql")
bus = &"SFX"

[node name="MetalStrike" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_m152d")

[node name="GameOver" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_rqlui")

[node name="ImpactSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_tou4a")
volume_db = 4.333

[node name="Music" type="Node" parent="."]

[node name="AtmosphereMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("2_s5ku7")
bus = &"Music"
